data/derived/sp14/progs/unify/prog1737.ml.out
Characters 22-35:
  let _ = Printf.printf string_of_int 1;;
                        ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type
         ('a -> 'b, out_channel, unit) format =
           ('a -> 'b, out_channel, unit, unit, unit, unit)
           CamlinternalFormatBasics.format6
